--- a/example/javascript/v1.0/1地图初始化/1_getStart.html
+++ b/example/javascript/v1.0/1地图初始化/1_getStart.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title></title>
 
-
-    <link rel="stylesheet" type="text/css" href="http://localhost:83/simplerMap/javascript/dev/dijit/themes/tundra/tundra.css"/>
-    <link rel="stylesheet" type="text/css" href="http://localhost:83/simplerMap/javascript/dev/esri/css/esri.css" />
+    <link rel="stylesheet" type="text/css" href="http://202.102.101.74:8012/simplerMap/javascript/v1.0/dijit/themes/tundra/tundra.css"/>
+    <link rel="stylesheet" type="text/css" href="http://202.102.101.74:8012/simplerMap/javascript/v1.0/esri/css/esri.css" />
     <style>
         html, body, #map {
             height: 100%; width: 100%; margin: 0; padding: 0;
@@ -17,20 +16,18 @@
     </style>
 
 
-    <script src="http://localhost:83/simplerMap/javascript/dev/init.js"></script>
+    <script src="http://202.102.101.74:8012/simplerMap/javascript/v1.0/init.js"></script>
+    <!--<script src="http://localhost:83/simplerMap/javascript/dev/init.js"></script>-->
     <script>
         //初始化地图代码
         dojo.ready(mapInit);
         function mapInit() {
 
             require([
-                        "esri/map",
-                        "dojo/parser",
                         "simpler/map/SimplerMap"
                     ],
-                    function (Map, parser,SimplerMap)
+                    function (SimplerMap)
                    {
-
                         //初始化地图
                         map = new SimplerMap("map", {
                             center: [118, 30.5],
