--- a/example/javascript/v1.0/3地图车辆操作/车辆操作.html
+++ b/example/javascript/v1.0/3地图车辆操作/车辆操作.html
@@ -16,8 +16,8 @@
     </style>
 
 
-    <script src="http://202.102.101.74:8012/simplerMap/javascript/v1.0/init.js"></script>
-    <!--<script src="http://localhost:83/simplerMap/javascript/dev/init.js"></script>-->
+    <!--<script src="http://202.102.101.74:8012/simplerMap/javascript/v1.0/init.js"></script>-->
+    <script src="http://localhost:83/simplerMap/javascript/dev/init.js"></script>
     <script>
         //初始化地图代码
         var map;
