--- a/javascript/dev/test/test.html
+++ b/javascript/dev/test/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>simplerMap V1单元测试页面</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="bower_components/jasmine/lib/jasmine-core/jasmine.css">
     <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
     <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
@@ -11,14 +12,34 @@
 
     <script>
 
-
+        //初始化地图代码
+        var map;
+        dojo.ready(mapInit);
+        function mapInit() {
+            require([
+                        "simpler/map/SimplerMap"
+                    ],
+                    function (SimplerMap)
+                    {
+                        //初始化地图
+                        map = new SimplerMap("map", {
+                            center: [118, 30.5],
+                            zoom: 4,
+                            logo: false,
+                            //设置地图级别
+                            minZoom: 4,
+                            maxZoom: 18
+                        });
+                    }
+            );
+        }
     </script>
 
 <body>
 <h1>jasmine test</h1>
 <div id="map" style="display:none"></div>
 <!--<script type="text/javascript" src="src.js"></script>-->
-<script type="text/javascript" src="test.js"></script>
+<script type="text/javascript" src="test.js" charset="UTF-8"></script>
 <!--<script type="text/javascript" src="report.js"></script>-->
 </body>
 </html>
